Prevent content of input-group-addons to overflow on the right side. Re #467

--- a/admin/templates/bootstrap/css/custom.css
+++ b/admin/templates/bootstrap/css/custom.css
@@ -185,7 +185,6 @@ a {
 
 .settings .input-group,#settings .input-group {
     width: 100%;
-    table-layout: fixed;
 }
 
 .documentation {
